Fix home page on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -77,6 +77,12 @@
         align-items: center;
       }
 
+      .companies {
+        display: flex;
+        justify-content: center;
+        padding: 40px 10px;
+      }
+
       /* Responsive layout */
       @media (max-width: 820px) {
         .intro {
@@ -86,12 +92,14 @@
         .description {
           flex-direction: column-reverse;
         }
-      }
 
-      .companies {
-        display: flex;
-        justify-content: center;
-        padding: 40px 10px;
+        .companies {
+          flex-direction: column;
+        }
+
+        .company {
+          padding-top: 10px;
+        }
       }
 
       .contact {
@@ -164,6 +172,15 @@
         z-index: 10000;
       }
 
+       /* Responsive layout */
+      @media (max-width: 820px) {
+        .doodle {
+          width: auto;
+          height: auto;
+          max-width: 360px;
+        }
+      }
+
       .polaroid {
         width: 300px;
         background: #f3f2f2;
@@ -194,6 +211,17 @@
 
       .recipe-photo {
         max-width: 540px;
+      }
+
+      /* Responsive layout */
+      @media (max-width: 820px) {
+        .recipe-photos {
+          flex-direction: column;
+        }
+
+        .recipe-photo {
+          margin-top: 10px;
+        }
       }
 
       /* headings */
